--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Dron010.github.io/goit-js-hw-12-countries",
+  "homepage": "https://a-v-kuzmich.github.io/goit-js-hw-12-countries",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-12-countries/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Dron010/goit-js-hw-12-countries.git"
+    "url": "git+https://github.com/a-v-kuzmich/goit-js-hw-12-countries.git"
   },
   "keywords": [],
   "author": "Andrey Kuzmichov, kuizmch@gmail.com, a.v.kuzmi4@gmail.com",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Dron010/goit-js-hw-12-countries/issues"
+    "url": "https://github.com/a-v-kuzmich/goit-js-hw-12-countries/issues"
   },
   "devDependencies": {
     "@pnotify/bootstrap4": "^5.2.0",
